--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>My academic and professional portfolio.</title>
+    <title>Jen Pontrelli's academic and professional portfolio.</title>
     <link href="stylesheet.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
-      <div class="container"></div>
+      <div class="container">
         <h1 id="site-title">Jen Pontrelli</h1>
         <p>MLIS, 2024</p>
+      </div>
   <nav>
     <ul>
       <li>Resume/CV</li>
