--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <main>
     <h1 id="article-title">Welcome to My Portfolio</h1>
     <p>
-      My name is Jen, and I am an MLIS student at Dominican University with an intended graduation date of May 2024. The artifacts contained in this portfolio showcase my aptitude in the key competencies in librarianship as well as my passion for education, literacy, inclusion, and public service.<br>
-      Throughout my studies I've had the opportunity to explore many facets of the profession, but have continually found myself drawn to public librarianship with particular interest in the areas of user services, reference, outreach, digital inclusion, readers' advisory, literacy, and social justice. These artifacts represent not just an understanding of these competencies, but the beginning and middle of a conversation in how to best serve patrons and community in a public library setting.
+      My name is Jen, and I am an MLIS student at Dominican University with an intended graduation date of May 2024. This portfolio showcases my aptitude in the key competencies in librarianship as well as my passion for education, literacy, inclusion, and public service.<br>
+      Throughout my studies I've had the opportunity to explore many facets of the profession, but have continually found myself drawn to public librarianship with particular interest in the areas of user services, reference, outreach, digital inclusion, readers' advisory, literacy, and social justice. The artifacts included in this portfolio represent not just an understanding of these competencies, but the beginning and middle of my personal conversation in how to best serve patrons and community in a public library setting. Please feel free to read over my resume or peruse my page of artifacts, which contains links to projects and deliverables I've completed during my MLIS education. Each artifact will be linked along with a description of the Student Learning Goals and Outcomes as required by Dominican University.<br>
+      If you have any questions about my work or are interested in working with me, please feel free to reach out via any method mentioned on my contact page. 
     </p>
 
   </main>
