--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <h1 id="site-title">Jen Pontrelli</h1>
-        <p>MLIS, 2024</p>
-      </div>
+        <h1 id="site-title">Jen Pontrelli<br MLIS May 2024 </h1>
   <nav>
     <ul>
       <li>Resume/CV</li>
