--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-        <h1 id="site-title">Jen Pontrelli<br MLIS May 2024 </h1>
+        <h1 id="site-title">Jen Pontrelli<br> MLIS May 2024 </h1>
   <nav>
     <ul>
       <li>Resume/CV</li>
