add links and styles

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1 id="site-title">Jen Pontrelli<br> MLIS May 2024 </h1>
   <nav>
     <ul>
-      <li>Resume/CV</li>
-      <li>Artifacts</li>
-      <li>Contact</li>
+      <li><a href="https://docs.google.com/document/d/1M4pAXGbYBtZCX_CbCpEeZOQ481KRZY3udK5jQx_9PYc/edit" alt="go to resume" >Resume/CV</a></li>
+      <li><a href="artifacts.html" alt="go to artifacts >Artifacts</a></li>
+      <li><a href="contact.html" alt="go to contact" >Contact</a></li>
     </ul>
   </nav>
   </header>
