--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
   </nav>
   </header>
   <main>
-    <figure class="main-image">
-    <img alt="Picture of library shelves containing books" img src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-    <figcaption>Photo by Zaini Izzuddin on Unsplash.</figcaption>
-    </figure>
+    <div class="container">
+     <div class="content">
+        <img alt="Picture of library shelves containing books" img src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          <figcaption>Photo by Zaini Izzuddin on Unsplash.</figcaption>
+        </figure>
+      </div>
+    </div>
     <h1 id="article-title">Welcome to My Portfolio</h1>
     <p class="article-info">
       My name is Jen, and I am an MLIS student at Dominican University with an intended graduation date of May 2024. This portfolio showcases my aptitude in the key competencies in librarianship as well as my passion for education, literacy, inclusion, and public service.
