--- a/index.html
+++ b/index.html
@@ -1,42 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <title>Jen Pontrelli's academic and professional portfolio.</title>
-    <link href="stylesheet.css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <header>
-        <h1 id="site-title">Jen Pontrelli, MLIS<br> e-Portfolio </h1>
-  <nav>
-    <ul>
-      <li><a href="https://docs.google.com/document/d/1M4pAXGbYBtZCX_CbCpEeZOQ481KRZY3udK5jQx_9PYc/edit" alt="go to resume" >Resume/CV</a></li>
-      <li><a href="artifacts.html" alt="go to artifacts" >Artifacts</a></li>
-      <li><a href="contact.html" alt="go to contact" >Contact</a></li>
-    </ul>
-  </nav>
-  </header>
-  <main>
-    <div class="container">
-     <figure class="figure">
-        <img alt="Picture of library shelves containing books" src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="main-image">
-          <figcaption>Photo by Zaini Izzuddin on Unsplash.</figcaption>
-    </figure>
-     <h1 id="article-title">Welcome to My Portfolio</h1>
-    <div class="article-info">
-      <p>
-      My name is Jen, and I am an MLIS student at Dominican University with an intended graduation date of May 2024. This portfolio showcases my aptitude in the key competencies in librarianship as well as my passion for education, literacy, inclusion, and public service.
-    </p>
-      <br>
-    <p>
-      Throughout my studies I've had the opportunity to explore many facets of the profession, but have continually found myself drawn to public librarianship with particular interest in the areas of user services, reference, outreach, digital inclusion, readers' advisory, literacy, and social justice. The artifacts included in this portfolio represent not just an understanding of these competencies, but the beginning and middle of my personal conversation in how to best serve patrons and community in a public library setting. Please feel free to read over my resume or peruse my page of artifacts, which contains links to projects and deliverables I've completed during my MLIS education. Each artifact will be linked along with a description of the Student Learning Goals and Outcomes as required by Dominican University.
-      
-    </p>
-    <br>
-    <p>
-      If you have any questions about my work or are interested in working with me, please feel free to reach out via any method mentioned on my contact page. 
-      
-    </p>
-      </div>
+<footer>
+  <div class="footer-left">
+    <p>Jen Pontrelli <br> jenpontrelli@gmail.com</p
+  </div>
+  <div class="footer-right">
+  <p>2023 Jen Pontrelli <br>All rights reserved.</p>
     </div>
-  </main>
+</footer>
+</body>
+</html>
