add styling for artifacts

--- a/artifacts.html
+++ b/artifacts.html
@@ -17,10 +17,13 @@
     </nav>
   </header>
   <main>
+    <section class="section-artifacts"
     <p>
         In this section, I have included samples of my MLIS coursework that showcase my scholarship in library services and programming. Each artifact is paired with one of the five MLIS Student Outcome and Learning Goals, as defined by Dominican University. As this portfolio is still in its beginning stages, please be on the lookout for additions to come including additional artifacts, a reflective essay, and an organized table of contents to help the reader navigate this portion of the site. 
     </p>
     <hr>
+</section>
+<section class="section-goals"
     <h2>Goal 1: Develop a professional identity and philosophy within the library and information professions. </h2>
     <p>In the Summer of 2023 I attended the American Library Association's Annual Conference in Chicago, IL. I documented my experience there with a PechaKucha-style presentation featuring only images and voice-over narration. This is just a snapshot of a wonderful weekend at the ALA conference.</p>
     <a href="https://mydomedu-my.sharepoint.com/:p:/g/personal/jpontrelli_my_dom_edu/EQ5_Rn2EZ9lNnAlsJLsoLxMBA7eV0ouQ8r6ZfaFOJac7zA?e=bn3pSV" alt="go to ALA Presentation">ALA PechaKucha Presentation</a>
@@ -35,11 +38,12 @@
     <hr>
     <h2>Goal 4: Synthesize theory and practice within a dynamic, evolving and diverse information environment.</h2>
     <p>My LIS 783: Digital Humanities final project: Mapping the American Spirit, challenged me to hypothesize and test various theories based on language usage in literature during the American Renaissance. It was a fascinating journey that I documented on a Google website. Here you will find an introduction to my various theories, several analyses and visualization tools and my own conclusions drawn from the data.</p>
-    <a href="https://sites.google.com/view/jen-pontrelli-lis-783-dh/home" alt="go to Mapping American Spirit page">Mapping the American Spirit site</a>
+    <a href="https://sites.google.com/view/jen-pontrelli-lis-783-dh/home" alt="go to Mapping American Spirit page">Mapping the American Spirit Site</a>
     <hr>
     <h2>Goal 5: Effectively communicate and collaborate to deliver, market and advocate for library and information services.</h2>
     <p>Throughout my studies, I have learned that advocating for library resources is just as important as advocating for our patrons. In my LIS 707: Leadership, Marketing, and Strategic Communication signature assignment, I created a board proposal for an in-depth series of programs aimed at increasing the digital literacy of the community. For this project I drew heavily on my prior research in digital divides to design and market what I hope to be an engaging and effective program.</p>
     <a href="https://docs.google.com/document/d/1YoHRu5QAsdRMY7SRgdKrk4cBperAvi7kTryhGLoL9c0/edit" alt="go to board proposal">Reference Outreach Program Proposal</a>
+</section>
 </main>
 <footer>
   <div class="footer-left">
