--- a/artifacts.html
+++ b/artifacts.html
@@ -23,7 +23,7 @@
     </p>
     <hr>
 </section>
-<section class="section-goals"
+<section class="section-goals">
     <h2>Goal 1: Develop a professional identity and philosophy within the library and information professions. </h2>
     <p>In the Summer of 2023 I attended the American Library Association's Annual Conference in Chicago, IL. I documented my experience there with a PechaKucha-style presentation featuring only images and voice-over narration. This is just a snapshot of a wonderful weekend at the ALA conference.</p>
     <a href="https://mydomedu-my.sharepoint.com/:p:/g/personal/jpontrelli_my_dom_edu/EQ5_Rn2EZ9lNnAlsJLsoLxMBA7eV0ouQ8r6ZfaFOJac7zA?e=bn3pSV" alt="go to ALA Presentation">ALA PechaKucha Presentation</a>
